# xeus-gab

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  compile_commands.json  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  kernel.json  xeus-gabConfig.cmake.in
.github/workflows/: main.yml
docs/: Doxyfile  environment.yml
docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
include/xeus-gab/: xeus_gab_config.hpp  xinterpreter.hpp
notebooks/: xeus-gab.ipynb
share/jupyter/kernels/xgab/: kernel.json.in
src/: main.cpp  xinterpreter.cpp
test/: test_xgab_kernel.py
